--- a/visit.html
+++ b/visit.html
@@ -37,9 +37,29 @@
         <div id="faq">
             <h1>FAQ</h1>
 
-            <button class="faq">Spørgsmål</button>
+            <button class="faq">Kan jeg parkere ved de forskellige attraktioner?</button>
             <div class="content">
-                <p>svar</p>
+                <p>Ja, der er masser af parkeringspladser ved de forskellige attraktioner. Husk at orientere dig på skiltene om de gældende regler for parkering. Der er ikke afmærkede båse til handicapparkering.</p>
+            </div>
+
+            <button class="faq">Kan jeg gå rundt til de tre attraktioner?</button>
+            <div class="content">
+                <p>Det er IKKE muligt at gå rundt til de forskellige attraktioner, men det er ingen årsag, hvis du er i bil eller med offentlig transport. </p>
+            </div>
+
+            <button class="faq">Kan man besøge med en skoleklasse? </button>
+            <div class="content">
+                <p>JA! Vi ser meget gerne, at institutioner medbringer elever! Vi kan tilbyde mange aktiviteter og har mange dygtige ansatte til at give guidede ture. Tjek evt. ‘Undervisning’ under den attraktion som I ønsker at besøge. </p>
+            </div>
+
+            <button class="faq">Kan jeg medbringe egen mad og drikke? </button>
+            <div class="content">
+                <p>Du er mere end velkommen til at medbringe mad. Vi har flere bænke rundt omkring, hvor du kan nyde dit medbragte måltid. </p>
+            </div>
+
+            <button class="faq">Hvor kan jeg følge med i hvad der sker i Kalklandet? </button>
+            <div class="content">
+                <p>I løbet af sæsonen har vi masser af spændende events på programmet. Se en oversigt på vores event-side. Derudover er du velkommen til at følge os på vores instagram @kalklandet_dk, som løbende bliver opdateret. </p>
             </div>
         </div>
 
