--- a/kontakt.html
+++ b/kontakt.html
@@ -8,29 +8,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-
+<header>
     <nav>
         <div id="left">
-            <div id="logo"></div>
+            <a href="index.html">
+                <div id="logo"></div>
+            </a>
         </div>
         <div id="right">
-            <li>
-                <ul><a href="undervisning.html">Undervisning</a></ul>
-                <ul><a href="events.html">Events</a></ul>
-                <ul><a href="billet.html">Køb billet</a></ul>
-                <ul><a href="kontakt.html">Kontakt os</a></ul>
-            </li>
+            <a href="visit.html">Besøg os</a>
+            <a href="undervisning.html">Undervisning</a>
+            <a href="events.html">Events</a>
+            <a href="kontakt.html">Kontakt os</a>
+            <a href="billet.html">Køb billet</a>
         </div>
     </nav>
+</header>
 
-    <div id="contact">KONTAKT INFO</div>
+<body>
 
-    <div id="route">RUTEVEJLEDNING</div>
 
-    <div id="about">OM OS</div>
+    <div id="contact">
+        <h1>Kontakt info</h1>
+        <ul>
+            <li>
+                <h2>Hovedkontor</h2>
+            </li>
+            <li>Rådhusvej 2, 4640 Faxe</li>
+            <li>+45 56502806</li>
+            <br>
+            <li>Telefonen er åben mandag til fredag i tidsrummet 9-15</li>
+        </ul>
+    </div>
 
-    <div id="jobs">LEDIGE STILLINGER</div>
+    <div id="route">
+        <h1>rutevejledning</h1>
+    </div>
+
+    <div id="about">
+        <h1>Om os</h1>
+    </div>
+
+    <div id="jobs">
+        <h1>ledige stillinger</h1>
+    </div>
 
     <footer>
         <div id="textf">priser og åbningstider</div>
