--- a/kontakt.html
+++ b/kontakt.html
@@ -16,7 +16,15 @@
             </a>
         </div>
         <div id="right">
-            <a href="visit.html">Besøg os</a>
+            <div class="dropdown">
+                <a>Besøg os</a>
+                <div class="dropdown-content">
+                    <a href="visit.html">Information</a>
+                    <a href="stevnsfort.html">Stevns fort</a>
+                    <a href="geomuseum.html">Geofaxe museum</a>
+                    <a href="stevnsklint.html">Stevns klint</a>
+                </div>
+            </div>
             <a href="undervisning.html">Undervisning</a>
             <a href="events.html">Events</a>
             <a href="kontakt.html">Kontakt os</a>
@@ -47,10 +55,21 @@
 
     <div id="about">
         <h1>Om os</h1>
+        <p>VELKOMMEN TIL KALKLANDET!
+            Vi er en organisation som ikke kun består af én men hele TRE forunderlige, historiske og dofdof attraktioner! Gå på opdagelse ved Stevns Klints mange skønne steder, der ligger som perler på en snor over en strækning på 20km fra, besøg Geomuseum Faxes udstilling om kalkens geologi og lær om livet i kridthavet før den store masseuddøden eller kom på en guidede tur på Stevnsfort og fortællinger fra den Kolde Krig alt imens du bevæger dig rundt i det underjordiske fort, der står af 1,7 km lang gang 18 meter under jorden.
+            Og vi er stolte af at være på Unescos verdensavsliste </p>
     </div>
 
     <div id="jobs">
         <h1>ledige stillinger</h1>
+        <p>På nuværende tidspunkt er der ingen ledige stillinger, men der bliver løbende stillinger ledige, så hvis du er interesseret i et spændende studie-, deltids- eller fuldtidsjob så send en ansøgning til leder af hovedkontor på museum@oesm.dk.</p>
+        <h2>Vær opmærksom på følgende:</h2>
+        <ul>
+            <li>Vi ansætter typisk Geologistuderende men ser også gerne ansøgninger fra lærerstuderende med naturgeografi som linjefag.</li>
+            <li>Vi foretrækker studerende, der er ca. 2 år henne i studiet.</li>
+            <li>Vi ansætter også folk til guidede ture Stevnsfort.</li>
+        </ul>
+
     </div>
 
     <footer>
