--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
 <header>
     <nav>
         <div id="left">
-            <a href="index.html"><div id="logo"></div></a>
+            <a href="index.html">
+                <div id="logo"></div>
+            </a>
         </div>
         <div id="right">
-            <a href="visit.html">Besøg os</a>
+            <div class="dropdown">
+                <a>Besøg os</a>
+                <div class="dropdown-content">
+                    <a href="visit.html">Information</a>
+                    <a href="stevnsfort.html">Stevns fort</a>
+                    <a href="geomuseum.html">Geofaxe museum</a>
+                    <a href="stevnsklint.html">Stevns klint</a>
+                </div>
+            </div>
             <a href="undervisning.html">Undervisning</a>
             <a href="events.html">Events</a>
             <a href="kontakt.html">Kontakt os</a>
