--- a/geomuseum.html
+++ b/geomuseum.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geomuseum</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <header>
@@ -17,7 +18,7 @@
         </div>
         <div id="right">
             <div class="dropdown">
-                <a>Besøg os</a>
+                <a>Besøg os<i class="fa fa-angle-down"></i></a>
                 <div class="dropdown-content">
                     <a href="visit.html">Information</a>
                     <a href="stevnsfort.html">Stevns fort</a>
@@ -38,7 +39,7 @@
     <div id="geo">
         <h1>Geofaxe museum</h1>
 
-        <div class="splash"><img src="materiale/Billeder/IMG_3614.PNG"></div>
+        <div class="splash"><img src="materiale/Billeder/Artboard%202.png"></div>
 
         <div class="info">
             <div class="text1">
