--- a/kontakt.html
+++ b/kontakt.html
@@ -75,8 +75,15 @@
 
     </div>
 
-    <footer>
-        <div id="textf">priser og åbningstider</div>
+<footer>
+        <div class="flogo"></div>
+        <div class="some">
+            <div class="insta"></div>
+            <div class="fb"></div>
+        </div>
+        <div id="madeby">
+            <p>By gruppe 6B</p>
+        </div>
     </footer>
 </body>
 
