--- a/undervisning.html
+++ b/undervisning.html
@@ -37,6 +37,10 @@
 <body>
 
     <div id="teachme">
+        <h1>Undervisning i kalklandet</h1>
+        <p>Undervisningsforløb på henholdsvis Stevnsfort, Stevns Klint eller Geofaxe Museum tilrettelægges i tæt dialog med læreren med henblik på at understøtte og perspektivere grundskolernes Fælles Mål og ungdomsuddannelsernes læreplaner og kernestof. Vi giver eleverne mulighed for at undersøge det fortidige dyreliv i kalkbruddet med geologisk værktøj, gå på opdagelse i det underjordiske fort eller arbejd med geologiske observationer og bjergundersøgelser.
+            <br><br>Undervisningsforløbet tilpasses det enkelte klassetrin og forløb! Vælg et forneden. </p>
+
 
         <div id="topbuttons">
             <button id="first">0.-3. klasse</button>
@@ -63,13 +67,35 @@
         </div>
 
         <div id="booking">
-            KONTAKTFORMULAR
+            <h1>Skoletjenestepriser</h1>
+            <p>Undervisning (ca. 45-60 minutter)</p>
+            <ul>
+                <li>Kr. 65,- pr. elev (op til to lærere gratis pr. klasse)</li>
+                <li>Prisen er gældende for alle klasser i grundskolen</li>
+                <li>Til undervisningsforløbet er det på Stevns klint muligt at leje hammer og mejsel. Pris kr. 250,- pr. klasse</li>
+            </ul>
+            <p>Introduktion (ca. 15 minutter)</p>
+            <ul>
+                <li>Kr. 65,- pr. elev (op til to lærere gratis pr. klasse)</li>
+                <li>Prisen er gældende for alle klasser i grundskolen</li>
+            </ul>
+            <p>Tilmelding via tlf eller email</p>
+            ´<button>
+                <p>+45 56502806</p>
+                <p>museum@oesm.dk</p>
+            </button>
         </div>
 
     </div>
-
-    <footer>
-        <div id="textf">priser og åbningstider</div>
+<footer>
+        <div class="flogo"></div>
+        <div class="some">
+            <div class="insta"></div>
+            <div class="fb"></div>
+        </div>
+        <div id="madeby">
+            <p>By gruppe 6B</p>
+        </div>
     </footer>
 
 
