--- a/visit.html
+++ b/visit.html
@@ -82,7 +82,14 @@
 
 
     <footer>
-        <div class="textf">priser og åbningstider</div>
+        <div class="flogo"></div>
+        <div class="some">
+            <div class="insta"></div>
+            <div class="fb"></div>
+        </div>
+        <div id="madeby">
+            <p>By gruppe 6B</p>
+        </div>
     </footer>
 
 
