--- a/geomuseum.html
+++ b/geomuseum.html
@@ -51,8 +51,15 @@
         </div>
     </div>
 
-    <footer>
-        <div id="textf">priser og åbningstider</div>
+<footer>
+        <div class="flogo"></div>
+        <div class="some">
+            <div class="insta"></div>
+            <div class="fb"></div>
+        </div>
+        <div id="madeby">
+            <p>By gruppe 6B</p>
+        </div>
     </footer>
 </body>
 
