--- a/index.html
+++ b/index.html
@@ -64,13 +64,20 @@
         <div id="text2"></div>
     </div>
 
-    <div id="route">
+    <div id="gethere">
         <h1>Rutevejledning</h1>
         <div id="map"></div>
     </div>
 
     <footer>
-        <div class="textf">priser og åbningstider</div>
+        <div class="flogo"></div>
+        <div class="some">
+            <div class="insta"></div>
+            <div class="fb"></div>
+        </div>
+        <div id="madeby">
+            <p>By gruppe 6B</p>
+        </div>
     </footer>
 
 
