--- a/stevnsklint.html
+++ b/stevnsklint.html
@@ -56,9 +56,16 @@
 	</div>
 
 
-	<footer>
-		<div id="textf">priser og åbningstider</div>
-	</footer>
+<footer>
+        <div class="flogo"></div>
+        <div class="some">
+            <div class="insta"></div>
+            <div class="fb"></div>
+        </div>
+        <div id="madeby">
+            <p>By gruppe 6B</p>
+        </div>
+    </footer>
 </body>
 
 </html>
